--- a/terraform-provider-{{ cookiecutter.cloud_provider.lower().replace(' ', '-') }}/overlay.yaml
+++ b/terraform-provider-{{ cookiecutter.cloud_provider.lower().replace(' ', '-') }}/overlay.yaml
@@ -2,6 +2,7 @@ overlay: 1.0.0
 info:
   title: {{ cookiecutter.cloud_provider }} Provider Overlay
   version: {{ cookiecutter.version }}
+extends: ./{{ cookiecutter.cloud_provider.lower().replace(' ', '-') }}.yaml
 actions:
   - target: $["info"]["title"]
     update: {{ cookiecutter.cloud_provider }} Provider
